--- a/src/app.css
+++ b/src/app.css
@@ -184,7 +184,7 @@ border-radius: 50%;
   border: none;
   width: 95%;
   height: 30px;
-  color: red;
+  color: #ffffff;
   outline: none;
 }
 .contact-input {
@@ -254,3 +254,28 @@ button {
   color: #fff;
   border-bottom: 2px solid #333;
 }
+
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+  li {
+      list-style: none;
+      float: left;
+      padding: 10px;
+  }
+      .pagebutton {
+          color: blue;
+          background-color: white;
+          width: 30px;
+          margin: 0;
+          padding: 4px;
+          font-weight: bold;
+          border: none;
+      }
+      .pagebutton:hover:focus {
+          outline: none;
+          border: none;
+      }
+  
