--- a/src/app.css
+++ b/src/app.css
@@ -45,7 +45,7 @@ a {
   color: #ffffff;
   padding: 20px;
 }
-@media only screen and (max-width: 801px) {
+@media only screen and (max-width: 1145px) {
   .header {
     flex-direction: column;
   }
@@ -65,7 +65,7 @@ a {
 }
 .side-container {
     width: 30%;
-    height: 450px;
+    max-height: 480px;
     display: flex;
     justify-content: flex-end;
     padding-right: 40px;
@@ -112,7 +112,7 @@ border-radius: 50%;
   font-size: 26px;
   font-family: "Montserrat", sans-serif;
 }
-@media only screen and (max-width: 801px) {
+@media only screen and (max-width: 1145px) {
   .main {
     flex-direction: column;
   }
@@ -135,6 +135,9 @@ border-radius: 50%;
   }
 }
 @media only screen and (max-width: 480px) {
+  .side-menu {
+    width: 100%;
+  }
   .body {
     width: 100%;
   }
@@ -182,7 +185,7 @@ border-radius: 50%;
   padding: 2px 0 2px 5px;
   color: #ffffff;
   border: none;
-  width: 95%;
+  width: 100%;
   height: 30px;
   color: #ffffff;
   outline: none;
@@ -194,12 +197,26 @@ border-radius: 50%;
     padding: 5px 0 5px 10px;
     border: none;
 }
+.clear-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 8px;
+}
 button {
   background: #5692e8;
   border: none;
   color: #ffffff;
   padding: 7px 15px;
   font-weight: 600;
+}
+@media only screen and (max-width: 480px) {
+  .clear-wrapper {
+    justify-content: flex-start;
+  }
+  button {
+    color: #ffffff;
+    width: 100%;
+  }
 }
 
 .new {
@@ -247,7 +264,7 @@ button {
   list-style-type: none;
   /* display: block; */
   height: 100px;
-  width: 400px;
+  width: 150px;
   /* font-size: 1.5em; */
   /* line-height: 2.5em; */
   padding: 5px;
